[gd_scene load_steps=13 format=3 uid="uid://chgeck41w1cmq"]

[ext_resource type="Script" path="res://scenes/boss_enemy_3.gd" id="1_kxlqv"]
[ext_resource type="Texture2D" uid="uid://ch0lf7l2ngiiw" path="res://sprites/water_drops1.png" id="2_flx4a"]
[ext_resource type="Texture2D" uid="uid://bn6g6nehfvf0r" path="res://sprites/water_drops2.png" id="3_jx34e"]
[ext_resource type="Texture2D" uid="uid://sn202a0d5ilu" path="res://sprites/water_drops3.png" id="4_abtwb"]
[ext_resource type="Texture2D" uid="uid://b3sbau7bvv0ld" path="res://sprites/water_drops4.png" id="5_psjph"]
[ext_resource type="Texture2D" uid="uid://0e5cg8cum6i1" path="res://sprites/water_drops5.png" id="6_0eube"]
[ext_resource type="PackedScene" uid="uid://cdvdlbsrcv1ga" path="res://scenes/tail_4.tscn" id="7_f64df"]
[ext_resource type="Texture2D" uid="uid://cuhl0vyxapecb" path="res://sprites/horu/images/worm_boss1.png" id="7_mx4ru"]

[sub_resource type="SpriteFrames" id="SpriteFrames_mvde4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_flx4a")
}, {
"duration": 1.0,
"texture": ExtResource("3_jx34e")
}, {
"duration": 1.0,
"texture": ExtResource("4_abtwb")
}, {
"duration": 1.0,
"texture": ExtResource("5_psjph")
}, {
"duration": 1.0,
"texture": ExtResource("6_0eube")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_xljfo"]
radius = 38.5876

[sub_resource type="Animation" id="Animation_fb87s"]
resource_name = "new_animation"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 0.7, 0.8, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1), Vector2(1, 1.15), Vector2(1, 1), Vector2(1.3, 1), Vector2(1.3, 1), Vector2(1, 0.7), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h8bbs"]
_data = {
"new_animation": SubResource("Animation_fb87s")
}

[node name="BossEnemy3" type="CharacterBody2D" node_paths=PackedStringArray("tail_segments")]
script = ExtResource("1_kxlqv")
tail_segments = [NodePath("Tail1"), NodePath("Tail2"), NodePath("Tail3"), NodePath("Tail4"), NodePath("Tail5"), NodePath("Tail6")]

[node name="water_drops" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0.380392)
scale = Vector2(1.90625, 1.90625)
sprite_frames = SubResource("SpriteFrames_mvde4")
autoplay = "default"
frame_progress = 0.690391

[node name="Tail6" parent="." instance=ExtResource("7_f64df")]
position = Vector2(-86, 70)
scale = Vector2(0.4, 0.4)

[node name="Tail5" parent="." instance=ExtResource("7_f64df")]
position = Vector2(-77, 61)
scale = Vector2(0.5, 0.5)

[node name="Tail4" parent="." instance=ExtResource("7_f64df")]
position = Vector2(-67, 52)

[node name="Tail3" parent="." instance=ExtResource("7_f64df")]
position = Vector2(-55, 43)
scale = Vector2(0.7, 0.7)

[node name="Tail2" parent="." instance=ExtResource("7_f64df")]
position = Vector2(-42, 33)
scale = Vector2(0.8, 0.8)

[node name="Tail1" parent="." instance=ExtResource("7_f64df")]
position = Vector2(-24, 21)
scale = Vector2(1, 1)

[node name="Head" type="Sprite2D" parent="."]
texture = ExtResource("7_mx4ru")

[node name="Head" type="Sprite2D" parent="Head"]
z_index = -99
z_as_relative = false
position = Vector2(4, 64)
texture = ExtResource("7_mx4ru")
flip_v = true

[node name="collider" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_xljfo")

[node name="Timer" type="Timer" parent="."]

[node name="JumpTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h8bbs")
}
autoplay = "new_animation"
speed_scale = 2.3

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
